Twenty Fourteen: Ensure the content after the Read More tag is visible and has the appropriate padding.
Props ianbelanger, sabernhardt, slobodanmanic, Quantumstate, Gwendydd, andraganescu, francina.
Fixes #28967.
Built from https://develop.svn.wordpress.org/trunk@46429


git-svn-id: http://core.svn.wordpress.org/trunk@46227 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfourteen/rtl.css
+++ b/wp-content/themes/twentyfourteen/rtl.css
@@ -166,6 +166,10 @@ td {
 	padding-left: 7px;
 }
 
+.entry-content p span[id^="more-"] {
+	float: right;
+}
+
 
 /**
  * 6.5 Galleries
